correct spacing in registration

--- a/client/src/components/pages/QuestionnaireRegistration/QuestionnaireRegistration.css
+++ b/client/src/components/pages/QuestionnaireRegistration/QuestionnaireRegistration.css
@@ -11,5 +11,4 @@
 	color: red;
 	font-size: 0.6em;
 	text-align: center;
-	padding: 1em 0;
 }
